--- a/DBBAB3248.opf/index.yml
+++ b/DBBAB3248.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   8aac17c20da8447f98546bed64678bc7:
     parts: {}
+    work_id: D3918
     span:
-    - vol: 64
+    - base: c32c
       start: 1
       end: 6913
-    work_id: D3918
